--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "braintree/braintree_php": "^6.11",
         "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.5",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
+        "nesbot/carbon": "^2.66",
         "pacificdev/laravel_9_preset": "^1.1"
     },
     "require-dev": {
